# python/apollo_openapi/model/open_consumer_summary_dto.py
@@ -22,7 +22,7 @@ import frozendict  # noqa: F401
 from apollo_openapi import schemas  # noqa: F401
 
 
-class OpenConsumerCreateRequestDTO(
+class OpenConsumerSummaryDTO(
     schemas.DictSchema
 ):
     """NOTE: This class is auto generated by OpenAPI Generator.
@@ -36,13 +36,14 @@ class OpenConsumerCreateRequestDTO(
 
         class properties:
             appId = schemas.StrSchema
-            allowCreateApplication = schemas.BoolSchema
-            allowManageUsers = schemas.BoolSchema
             name = schemas.StrSchema
             orgId = schemas.StrSchema
             orgName = schemas.StrSchema
             ownerName = schemas.StrSchema
-            rateLimitEnabled = schemas.BoolSchema
+            ownerEmail = schemas.StrSchema
+            consumerId = schemas.Int64Schema
+            allowCreateApplication = schemas.BoolSchema
+            allowManageUsers = schemas.BoolSchema
 
 
             class rateLimit(
@@ -52,26 +53,23 @@ class OpenConsumerCreateRequestDTO(
 
                 class MetaOapg:
                     inclusive_minimum = 0
+            rateLimitEnabled = schemas.BoolSchema
             __annotations__ = {
                 "appId": appId,
-                "allowCreateApplication": allowCreateApplication,
-                "allowManageUsers": allowManageUsers,
                 "name": name,
                 "orgId": orgId,
                 "orgName": orgName,
                 "ownerName": ownerName,
-                "rateLimitEnabled": rateLimitEnabled,
+                "ownerEmail": ownerEmail,
+                "consumerId": consumerId,
+                "allowCreateApplication": allowCreateApplication,
+                "allowManageUsers": allowManageUsers,
                 "rateLimit": rateLimit,
+                "rateLimitEnabled": rateLimitEnabled,
             }
 
     @typing.overload
     def __getitem__(self, name: typing_extensions.Literal["appId"]) -> MetaOapg.properties.appId: ...
-
-    @typing.overload
-    def __getitem__(self, name: typing_extensions.Literal["allowCreateApplication"]) -> MetaOapg.properties.allowCreateApplication: ...
-
-    @typing.overload
-    def __getitem__(self, name: typing_extensions.Literal["allowManageUsers"]) -> MetaOapg.properties.allowManageUsers: ...
 
     @typing.overload
     def __getitem__(self, name: typing_extensions.Literal["name"]) -> MetaOapg.properties.name: ...
@@ -86,27 +84,33 @@ class OpenConsumerCreateRequestDTO(
     def __getitem__(self, name: typing_extensions.Literal["ownerName"]) -> MetaOapg.properties.ownerName: ...
 
     @typing.overload
-    def __getitem__(self, name: typing_extensions.Literal["rateLimitEnabled"]) -> MetaOapg.properties.rateLimitEnabled: ...
+    def __getitem__(self, name: typing_extensions.Literal["ownerEmail"]) -> MetaOapg.properties.ownerEmail: ...
+
+    @typing.overload
+    def __getitem__(self, name: typing_extensions.Literal["consumerId"]) -> MetaOapg.properties.consumerId: ...
+
+    @typing.overload
+    def __getitem__(self, name: typing_extensions.Literal["allowCreateApplication"]) -> MetaOapg.properties.allowCreateApplication: ...
+
+    @typing.overload
+    def __getitem__(self, name: typing_extensions.Literal["allowManageUsers"]) -> MetaOapg.properties.allowManageUsers: ...
 
     @typing.overload
     def __getitem__(self, name: typing_extensions.Literal["rateLimit"]) -> MetaOapg.properties.rateLimit: ...
 
     @typing.overload
+    def __getitem__(self, name: typing_extensions.Literal["rateLimitEnabled"]) -> MetaOapg.properties.rateLimitEnabled: ...
+
+    @typing.overload
     def __getitem__(self, name: str) -> schemas.UnsetAnyTypeSchema: ...
 
-    def __getitem__(self, name: typing.Union[typing_extensions.Literal["appId", "allowCreateApplication", "allowManageUsers", "name", "orgId", "orgName", "ownerName", "rateLimitEnabled", "rateLimit", ], str]):
+    def __getitem__(self, name: typing.Union[typing_extensions.Literal["appId", "name", "orgId", "orgName", "ownerName", "ownerEmail", "consumerId", "allowCreateApplication", "allowManageUsers", "rateLimit", "rateLimitEnabled", ], str]):
         # dict_instance[name] accessor
         return super().__getitem__(name)
 
 
     @typing.overload
     def get_item_oapg(self, name: typing_extensions.Literal["appId"]) -> typing.Union[MetaOapg.properties.appId, schemas.Unset]: ...
-
-    @typing.overload
-    def get_item_oapg(self, name: typing_extensions.Literal["allowCreateApplication"]) -> typing.Union[MetaOapg.properties.allowCreateApplication, schemas.Unset]: ...
-
-    @typing.overload
-    def get_item_oapg(self, name: typing_extensions.Literal["allowManageUsers"]) -> typing.Union[MetaOapg.properties.allowManageUsers, schemas.Unset]: ...
 
     @typing.overload
     def get_item_oapg(self, name: typing_extensions.Literal["name"]) -> typing.Union[MetaOapg.properties.name, schemas.Unset]: ...
@@ -121,15 +125,27 @@ class OpenConsumerCreateRequestDTO(
     def get_item_oapg(self, name: typing_extensions.Literal["ownerName"]) -> typing.Union[MetaOapg.properties.ownerName, schemas.Unset]: ...
 
     @typing.overload
-    def get_item_oapg(self, name: typing_extensions.Literal["rateLimitEnabled"]) -> typing.Union[MetaOapg.properties.rateLimitEnabled, schemas.Unset]: ...
+    def get_item_oapg(self, name: typing_extensions.Literal["ownerEmail"]) -> typing.Union[MetaOapg.properties.ownerEmail, schemas.Unset]: ...
+
+    @typing.overload
+    def get_item_oapg(self, name: typing_extensions.Literal["consumerId"]) -> typing.Union[MetaOapg.properties.consumerId, schemas.Unset]: ...
+
+    @typing.overload
+    def get_item_oapg(self, name: typing_extensions.Literal["allowCreateApplication"]) -> typing.Union[MetaOapg.properties.allowCreateApplication, schemas.Unset]: ...
+
+    @typing.overload
+    def get_item_oapg(self, name: typing_extensions.Literal["allowManageUsers"]) -> typing.Union[MetaOapg.properties.allowManageUsers, schemas.Unset]: ...
 
     @typing.overload
     def get_item_oapg(self, name: typing_extensions.Literal["rateLimit"]) -> typing.Union[MetaOapg.properties.rateLimit, schemas.Unset]: ...
 
     @typing.overload
+    def get_item_oapg(self, name: typing_extensions.Literal["rateLimitEnabled"]) -> typing.Union[MetaOapg.properties.rateLimitEnabled, schemas.Unset]: ...
+
+    @typing.overload
     def get_item_oapg(self, name: str) -> typing.Union[schemas.UnsetAnyTypeSchema, schemas.Unset]: ...
 
-    def get_item_oapg(self, name: typing.Union[typing_extensions.Literal["appId", "allowCreateApplication", "allowManageUsers", "name", "orgId", "orgName", "ownerName", "rateLimitEnabled", "rateLimit", ], str]):
+    def get_item_oapg(self, name: typing.Union[typing_extensions.Literal["appId", "name", "orgId", "orgName", "ownerName", "ownerEmail", "consumerId", "allowCreateApplication", "allowManageUsers", "rateLimit", "rateLimitEnabled", ], str]):
         return super().get_item_oapg(name)
 
 
@@ -137,29 +153,33 @@ class OpenConsumerCreateRequestDTO(
         cls,
         *_args: typing.Union[dict, frozendict.frozendict, ],
         appId: typing.Union[MetaOapg.properties.appId, str, schemas.Unset] = schemas.unset,
-        allowCreateApplication: typing.Union[MetaOapg.properties.allowCreateApplication, bool, schemas.Unset] = schemas.unset,
-        allowManageUsers: typing.Union[MetaOapg.properties.allowManageUsers, bool, schemas.Unset] = schemas.unset,
         name: typing.Union[MetaOapg.properties.name, str, schemas.Unset] = schemas.unset,
         orgId: typing.Union[MetaOapg.properties.orgId, str, schemas.Unset] = schemas.unset,
         orgName: typing.Union[MetaOapg.properties.orgName, str, schemas.Unset] = schemas.unset,
         ownerName: typing.Union[MetaOapg.properties.ownerName, str, schemas.Unset] = schemas.unset,
-        rateLimitEnabled: typing.Union[MetaOapg.properties.rateLimitEnabled, bool, schemas.Unset] = schemas.unset,
+        ownerEmail: typing.Union[MetaOapg.properties.ownerEmail, str, schemas.Unset] = schemas.unset,
+        consumerId: typing.Union[MetaOapg.properties.consumerId, decimal.Decimal, int, schemas.Unset] = schemas.unset,
+        allowCreateApplication: typing.Union[MetaOapg.properties.allowCreateApplication, bool, schemas.Unset] = schemas.unset,
+        allowManageUsers: typing.Union[MetaOapg.properties.allowManageUsers, bool, schemas.Unset] = schemas.unset,
         rateLimit: typing.Union[MetaOapg.properties.rateLimit, decimal.Decimal, int, schemas.Unset] = schemas.unset,
+        rateLimitEnabled: typing.Union[MetaOapg.properties.rateLimitEnabled, bool, schemas.Unset] = schemas.unset,
         _configuration: typing.Optional[schemas.Configuration] = None,
         **kwargs: typing.Union[schemas.AnyTypeSchema, dict, frozendict.frozendict, str, date, datetime, uuid.UUID, int, float, decimal.Decimal, None, list, tuple, bytes],
-    ) -> 'OpenConsumerCreateRequestDTO':
+    ) -> 'OpenConsumerSummaryDTO':
         return super().__new__(
             cls,
             *_args,
             appId=appId,
-            allowCreateApplication=allowCreateApplication,
-            allowManageUsers=allowManageUsers,
             name=name,
             orgId=orgId,
             orgName=orgName,
             ownerName=ownerName,
-            rateLimitEnabled=rateLimitEnabled,
+            ownerEmail=ownerEmail,
+            consumerId=consumerId,
+            allowCreateApplication=allowCreateApplication,
+            allowManageUsers=allowManageUsers,
             rateLimit=rateLimit,
+            rateLimitEnabled=rateLimitEnabled,
             _configuration=_configuration,
             **kwargs,
         )
