# python/apollo_openapi/models/__init__.py
@@ -23,6 +23,7 @@ from apollo_openapi.model.open_cluster_dto import OpenClusterDTO
 from apollo_openapi.model.open_cluster_namespace_role_user_dto import OpenClusterNamespaceRoleUserDTO
 from apollo_openapi.model.open_consumer_create_request_dto import OpenConsumerCreateRequestDTO
 from apollo_openapi.model.open_consumer_info_dto import OpenConsumerInfoDTO
+from apollo_openapi.model.open_consumer_summary_dto import OpenConsumerSummaryDTO
 from apollo_openapi.model.open_create_app_dto import OpenCreateAppDTO
 from apollo_openapi.model.open_create_namespace_dto import OpenCreateNamespaceDTO
 from apollo_openapi.model.open_env_cluster_dto import OpenEnvClusterDTO
